version/0.12/_sources/api/solver/_autosummary/settings/wall_film.rst.txt
:orphan:

.. _wall_film:

wall_film
=========

.. currentmodule:: ansys.fluent.core.solver.settings_231.wall_film

.. autoclass:: wall_film
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==============================================================================================   =================================================================================

Child                                                                                                                                                                      Summary

==============================================================================================   =================================================================================
:ref:`include_convective_heat_transfer <include_convective_heat_transfer>`                           Enable/disable convection/conduction in the film-to-wall heat transfer model.

:ref:`include_lwf_particles_in_dpm_concentration <include_lwf_particles_in_dpm_concentration>`          Include/exclude LWF particle mass in the calculation of DPM Concentration.

:ref:`wall_film_temperature_limiter <wall_film_temperature_limiter>`                                                                        'wall_film_temperature_limiter' child.

==============================================================================================   =================================================================================

.. rubric:: Included in:

==========================================   =====================================================================================

Parent                                                                                                                     Summary

==========================================   =====================================================================================
:ref:`physical_models <physical_models_1>`       Main menu to enable the required physical submodels for the discrete phase model.

==========================================   =====================================================================================

