version/0.17/_sources/api/solver/_autosummary/settings/wall_film.rst.txt
:orphan:

.. _wall_film:

wall_film
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.wall_film.wall_film
    :show-inheritance:

.. rubric:: Attributes

================================================================================================================   =================================================================================

Attribute                                                                                                                                                                                    Summary

================================================================================================================   =================================================================================
:ref:`convective_heat_transfer <convective_heat_transfer>`                                                                                                         'convective_heat_transfer' child.

:ref:`include_convective_heat_transfer <include_convective_heat_transfer>`                                             Enable/disable convection/conduction in the film-to-wall heat transfer model.

:ref:`film_movement <film_movement>`                                                                                                        Set options for controlling the film particles movement.

:ref:`lwf_particle_inclusion_in_dpm_concentration_enabled <lwf_particle_inclusion_in_dpm_concentration_enabled>`          Include/exclude LWF particle mass in the calculation of DPM Concentration.

:ref:`wall_film_temperature_limiter <wall_film_temperature_limiter>`                                                                                          'wall_film_temperature_limiter' child.

================================================================================================================   =================================================================================

.. rubric:: Included in:

==========================================   =====================================================================================

Parent                                                                                                                     Summary

==========================================   =====================================================================================
:ref:`physical_models <physical_models_1>`       Main menu to enable the required physical submodels for the discrete phase model.

==========================================   =====================================================================================

